# ucp-conformance

./: .gitignore  LICENSE  README.md  action.yml
.github/workflows/: conformance.yml  release.yml
api/: worker.js  wrangler.toml
cli/: README.md  pyproject.toml  spck.py
conformance/: .vendor  AMBIGUITIES.md  SOURCES.lock.json  merchant.config.example.json
conformance/agent/: agent_checks.py  agent_coverage.json  agent_coverage_lock.json  agent_denominator_lock.json  agent_governance.py  agent_matrix.py  agent_ratchet.json  agent_review_signoffs.json  build_demo_data.py  (+3 more)
docs/: ROADMAP.md  TEST-INTEGRITY.md  TWO-LANE.md  ap2-vectors.md  merchant-conformance.md  spec-coverage-matrix.md  spec-coverage.md
packaging/: README.md  preflight.sh  pyproject.toml  sync_bundle.sh
packaging/spck_conformance/: cli.py
packaging/spck_conformance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
packaging/spck_conformance/_bundle/conformance/agent/: agent_checks.py  agent_coverage_lock.json  agent_denominator_audit.json  agent_denominator_undercount_audit.json  agent_exemptions.json  agent_governance.py  agent_matrix.py  agent_ratchet.json  agent_review_signoffs.json  reference_agent.py  sandbox.py
packaging/spck_conformance/_bundle/conformance/checks/: engine.py  merchant.py  merchant_checks.py  merchant_checks_01_11_01_23_oauth.py  merchant_checks_01_11_01_23_receiver.py  merchant_checks_01_23.py  merchant_checks_04_08.py  merchant_checks_04_08_ap2.py  merchant_checks_04_08_cartupdate.py  merchant_checks_04_08_discovery.py  merchant_checks_04_08_events.py  merchant_checks_04_08_identity.py  merchant_checks_04_08_lifecycle.py  merchant_checks_04_08_order.py  merchant_checks_04_08_payment.py  merchant_checks_04_08_receiver.py  merchant_checks_04_08_signatures.py  merchant_checks_04_08_tls.py  oauth_harness.py
packaging/spck_conformance/_bundle/conformance/common/: crypto.py  sdjwt.py
packaging/spck_conformance/_bundle/conformance/requirements/: README.md
packaging/spck_conformance/_bundle/conformance/requirements/2026-01-11/: checkout-lifecycle.json  discount-consent-identity.json  errors-validation-security.json  fulfillment.json  order.json  overview.json  payment.json  transports.json
packaging/spck_conformance/_bundle/conformance/requirements/2026-01-23/: checkout-lifecycle.json  discount-consent-identity.json  discovery-negotiation.json  order.json  payment.json
packaging/spck_conformance/_bundle/conformance/requirements/2026-04-08/: catalog.json  checkout-lifecycle.json  discounts-consent.json  discovery.json  error-envelope.json  identity-linking.json  order.json  payment.json  signals-attribution-eligibility.json  signatures.json  transports.json
packaging/spck_conformance/_bundle/conformance/selfcheck/: verdict_gate.py
packaging/spck_conformance/_bundle/conformance/testbed/: frozen.py  gen_goldens.py  merchant_verify.py  mint.py
public/: 404.html  _headers  _redirects  admin.html  agent-demo.json  agent.html  check.html  coverage.html  coverage.json  docs.html  guide.html  index.html  rubric.html  sandbox.html  site.css  site_claims.json  tool.html
(+516 files in other folders)
