[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spck"
version = "1.0.0"
description = "UCP Conformance Testing CLI — Test any Universal Commerce Protocol server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [{ name = "UCP Conformance Contributors" }]
keywords = ["ucp", "conformance", "testing", "commerce", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
spck = "spck:main"

[project.urls]
Homepage = "https://spck.dev"
Repository = "https://github.com/vishkaty/ucp-conformance"
